--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
-output: github_document
+output: 
+  github_document:
+    html_preview: false
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -16,39 +18,17 @@ knitr::opts_chunk$set(
 # letterbox
 
 <!-- badges: start -->
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/news-r/letterbox?branch=master&svg=true)](https://ci.appveyor.com/project/news-r/letterbox)
+[![Travis build status](https://travis-ci.org/news-r/letterbox.svg?branch=master)](https://travis-ci.org/news-r/letterbox)
 <!-- badges: end -->
 
-The goal of letterbox is to ...
+letterbox is a news article crawler.
 
 ## Installation
 
-You can install the released version of letterbox from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of letterbox from Github with:
 
 ``` r
-install.packages("letterbox")
+install.packages("remotes")
+remotes::install_github("news-r/letterbox")
 ```
-
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(letterbox)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
