--- a/README.Rmd
+++ b/README.Rmd
@@ -24,6 +24,20 @@ knitr::opts_chunk$set(
 
 letterbox is a news article crawler.
 
+## Usage
+
+Setup your session. 
+
+```r
+letterbox_key("xxXxxX", "XxxXx")
+```
+
+Get some data.
+
+```{r}
+letterbox::get_articles("United Nations", since = Sys.Date() - 7, until = Sys.Date(), language = "en")
+```
+
 ## Installation
 
 You can install the released version of letterbox from Github with:
