--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,13 @@ letterbox_key("xxXxxX", "XxxXx")
 Get some data.
 
 ```{r}
-letterbox::get_articles("United Nations", since = Sys.Date() - 7, until = Sys.Date(), language = "en")
+letterbox::get_articles(
+  q = "United Nations", 
+  since = Sys.Date() - 7, 
+  until = Sys.Date(), 
+  language = "en",
+  results = 100
+)
 ```
 
 ## Installation
